# src/infrastructure/routes/PaymentRoute.ts
@@ -2,13 +2,16 @@ import { Router } from "express";
 import { PaymentAdapter } from "@adapters/PaymentAdapter";
 import { PaymentUseCase } from "@usecases/PaymentUseCase";
 import { PaymentController } from "@controllers/PaymentController";
+import { WebhookController } from "@controllers/WebhookController";
 import { OrderAdapter } from "@adapters/OrderAdapter";
+import { CustomerAdapter } from "@adapters/CustomerAdapter";
 
 export const paymentRoute = Router();
 
 const paymentAdapter = new PaymentAdapter();
 const orderAdapter = new OrderAdapter();
-const paymentUseCase = new PaymentUseCase(paymentAdapter, orderAdapter);
+const customerAdapter = new CustomerAdapter();
+const paymentUseCase = new PaymentUseCase(paymentAdapter, orderAdapter, customerAdapter);
 const paymentController = new PaymentController(paymentUseCase);
 
 paymentRoute.get("/all", (req, res) => {
@@ -51,4 +54,19 @@ paymentRoute.put("/update/:id", (req, res) => {
         }
     */
 	paymentController.updatePayment(req, res);
+});
+paymentRoute.post("/webhook", (req, res) => {
+	// #swagger.tags = ['WebhookCheckout']
+	/* #swagger.requestBody = {
+            required: true,
+            content: {
+                "application/json": {
+                    schema: { $ref: '#/definitions/WebhookCheckout' }
+                }
+            }
+        }
+    */
+
+   //paymentController.updatePayment(req, res);
+    paymentController.webhookPayment(req, res);
 });
